syntax = "proto3";

package calculator;
option go_package="calcpb";

message Numbers{
  int64 first_num = 1;
  int64 second_num = 2;
}

message CalculatorRequest {
  Numbers numbers = 1;
}

message CalculatorResponse {
  int64 result = 1;
}

service CalculatorService{
  // Unary API
  rpc Calculate(CalculatorRequest) returns (CalculatorResponse){};
}